--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,5 +1,9 @@
 .header {
     width: 100%;
-    height: 45px;
-    background-color: antiquewhite;
+    height: 55px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #eee;
 }
