--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap);
 @import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html,
 body {
