--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,7 +56,6 @@ main {
   border: none;
   border-radius: 0.75rem 0px 0px 0.75rem;
   padding: 0.25rem 0.25rem 0.25rem 1rem;
-  background-color: #eee;
 }
 .fold-btn:hover {
   background-color: #d1d1d1;
@@ -75,10 +74,6 @@ main {
   border-radius: 5px;
   cursor: pointer;
   margin-right: 1.5rem;
-}
-
-.user-btn:hover {
-  background-color: #eee;
 }
 
 
@@ -113,7 +108,7 @@ main {
   cursor: pointer;
 }
 
-.dropdown ul li:hover {
+/* .dropdown ul li:hover {
   font-weight: 700;
   background: #f2f2f2;
-}
+} */
